syntax = "proto3";

import "common.proto";

option java_package = "com.graduate.design.proto";
option java_outer_classname="ChangePassword";
option go_package = "./pb_gen";

message ChangePasswordRequest{
  string oldHashId = 1;
  string newHashId = 2;
  string key1 = 4;
  string key2 = 5;

  BaseReq baseReq = 255;
}

message ChangePasswordResponse{
  BaseResp baseResp = 255;    
}