syntax = "proto3";
import "common.proto";
option go_package = "./pb_gen";
option java_package = "com.graduate.design.proto";
option java_outer_classname="GetShareTokens";

message GetShareTokensRequest{
	string userId = 1;
	BaseReq baseReq = 255;
}

message ShareMesssage{
  ShareToken shareToken = 1;
	string secretKey = 2;
	string fileName = 3;
	string shareTokenId = 4;
	string isShare = 5;
	int64 createTime = 6;
}

message GetShareTokensResponse{
	repeated ShareMesssage shareMessages = 1;
	BaseResp baseResp = 255;
}

